# ScrabbleEye

./: .gitignore  CMakeLists.txt  README.md  ScrabbleEye.cpp  ScrabbleEye.cxx
res/yml/: lifecam_studio_1080.yml
tests/: corner_finder_test.cpp  lines_test.cxx  sample_test.cpp
tools/: CMakeLists.txt  capture.cpp
utils/: AssertionException.cpp  AssertionException.hpp  CMakeLists.txt  CornerFinder.cpp  CornerFinder.hpp  ImageOperations.cpp  ImageOperations.hpp  Line.cpp  Line.hpp  Utils.cpp  Utils.cxx  Utils.hpp  constants.hpp
